--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     {% if title %}
       <title>{{ title }}</title>
     {% else %}
-      <title>Local Data Analyse</title>
+      <title>Web Data Analysis</title>
     {% endif %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
