--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,9 @@
       <div class="col-md-12">
         <p class="lead">
         </p>
-        <form action="/post" method="post" class="form-inline">
-          <label for="name">CSV file</label>
-          <input type="text" class="form-control" id="name" name="url" placeholder="Name">
-          <button type="submit" class="btn btn-default">Submit</button>
+        <form action="/analysis" method="post" class="" enctype="multipart/form-data">
+          <input type="file" class="" id="csv" name="file" required="">
+          <button type="submit" class="">Submit</button>
         </form>
       </div>
     </div>
